application/svc-patch.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: sample-app
  name: app-sample-svc
  namespace: app-sample
spec:
  ports:
  - name: web
    port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: nodejs-app
  sessionAffinity: None
  type: ClusterIP
